# oneway-cpp

./: .gitignore  .gitmodules  CHANGES.md  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  libtool  oneway-tests.sh  oneway.cpp
.github/workflows/: c-cpp.yml  compile-mac.yml  compile-native.yml  cross-compile-arm64.yml  cross-compile-pizero.yml  cross-compile-windows.yml  version-increment.yml
src/: config.h.in  liboneway_la-oneway.lo  main.cpp  oneway.cpp  oneway.h
tests/: general-invoke.sh  unit-tests.cpp
tests/test-vectors/: legacy-ciphertext1.1w  legacy-key1.key  legacy-key1.pub
