bin_PROGRAMS = oneway
oneway_SOURCES = oneway.cpp
oneway_CPPFLAGS = -Iexternal -Wno-deprecated-declarations
oneway_DEPENDENCIES = external/cryptopp/libcryptopp.a
oneway_LDADD = external/cryptopp/libcryptopp.a



#external/cryptopp/libcryptopp.a:
#	cp external/cryptopp-pem/* external/cryptopp/ && cd external/cryptopp && $(MAKE)
